# diceware-ee

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  _auto_config.sh  basic_generation.sh  config.py  ppmgr.sh  pyproject.toml  setup.cfg  setup.py  sonad.py  tox.ini
admin/: .admin-config.yaml
diceware/: __init__.py  _version.py  phrases.py
tests/: test_phrases.py
