[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "diceware"
version = '0.2.0'
description = "Diceware passphrase generation"
authors = ["bobrock <bobrock@tuta.io>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/barretobrock/diceware-ee'
packages = [
    { include = 'diceware' },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"
# Optional dependencies would go down here
# example = { version = ">=1.7.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
tox = "^3.24.5"

[tool.poetry.extras]
test = ["pytest"]
