[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "diceware"
version = '0.3.0'
description = "Diceware passphrase generation"
authors = ["bobrock <bobrock@tuta.io>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/barretobrock/diceware-ee'
packages = [
    { include = 'diceware' },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">=3.10"
# Optional dependencies would go down here
# example = { version = ">=1.7.0", optional = true }

[tool.poetry.group.dev.dependencies]
flake8 = "^7"
pre-commit = "^4"
pytest = "^8"
pytest-cov = "^6"
setuptools = "^80"
tox = "^4"

[tool.poetry.extras]
test = ["pytest"]
